New Data manipulation

--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Data Import"
-date: 
+date: "Sept 18th, 2018"
 output: html_document
 ---
 
@@ -25,4 +25,54 @@ Importing pups dataset.
 ```{r}
 litters_pups = read_csv(file = "./data/FAS_pups.csv")
 litters_pups = janitor::clean_names(litters_pups)
+```
+
+#Look at Data.
+
+```{r}
+head(litters_data)
+
+skimr::skim(litters_data)
+```
+
+
+Skip some rows; omit variable names.
+
+```{r}
+
+litters_data = read_csv(file = "./data/FAS_litters.csv",
+  skip = 10, col_names = FALSE)
+```
+
+```{r}
+pups_data = read_csv(file = "./data/FAS_pups.csv", col_types = "ciiiii")
+pups_data = janitor::clean_names(pups_data)
+
+```
+
+##Other formats
+
+Read in mlb data (excel)
+
+```{r}
+mlb_data = readxl::read_excel(path = "./data/mlb11.xlsx")
+
+mlb_subset = readxl::read_excel(path = "./data/mlb11.xlsx", range = "A1:E17")
+```
+
+Read in pulse data (SAS):
+
+```{r}
+pulse_data = haven::read_sas("./data/public_pulse_data.sas7bdat")
+```
+
+
+##compare with base R
+
+```{r}
+pups_readr = read_csv("./data/FAS_pups.csv")
+pups_base = read.csv("./data/FAS_pups.csv")
+
+pups_readr$S
+pups_base$S
 ```
