--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -23,3 +23,90 @@ pups_data = janitor::clean_names(pups_data)
 
 ```
 
+##Select Variables
+
+```{r}
+select(litters_data, group, litter_number, gd0_weight) #saying what variables you are interested in
+select(litters_data, litter_number, gd0_weight, pups_survive)
+
+```
+
+... by specifying a range:
+
+```{r}
+select(litters_data, gd_of_birth:pups_survive)
+select(litters_data, group, gd_of_birth:pups_survive)
+```
+
+```{r}
+select(litters_data, -litter_number)
+```
+
+Renaming gd0_weight to gest_day_0_weight while selecting others:
+```{r}
+select(litters_data, group, litter_number, gest_day_0_weight = gd0_weight)
+rename(litters_data, gest_day_0_weight = gd0_weight)
+```
+
+```{r}
+select(litters_data, starts_with("gd"))
+select(litters_data, litter_number, starts_with("pup"))
+
+select(litters_data, litter_number, everything())
+```
+
+Selecting litter number, sex, and PD ears.
+```{r with_pups}
+select(pups_data, litter_number, sex, pd_ears)
+```
+
+## Filter observations for litters_data
+
+Do some filtering!!
+```{r}
+filter(litters_data, gd0_weight < 25)
+filter(litters_data, gd0_weight >= 25)
+
+filter(litters_data, pups_born_alive == 8)
+
+filter(litters_data, !is.na(gd0_weight))
+
+filter(litters_data, group == "Low7" | group == "Low8")
+filter(litters_data, group %in% c("Low7", "Low8"))
+filter(litters_data, pups_born_alive %in% 4:7, !is.na(gd0_weight)) #give me all the data where first is true AND second is true (can also use & sign instead of comma)
+```
+
+Filtering for pups_data
+```{r}
+filter(pups_data, sex == 1)
+filter(pups_data, pd_walk < 11, sex == 2)
+```
+
+## Mutate --> taking multiple observations and altering them
+
+```{r} 
+mutate(litters_data, #can do multiple operations in mutate
+  wt_gain = gd18_weight - gd0_weight,
+  group = tolower(group) #creating a new variable called wt_gain then changing group to something new (i.e. lowercase)
+)
+
+mutate(litters_data,
+  wt_gain = gd18_weight - gd0_weight,
+  wt_gain_squared = wt_gain^2)
+```
+
+##Arrange
+
+Arrange the data...
+
+```{r}
+arrange(litters_data, pups_born_alive, gd0_weight)
+arrange(litters_data, desc(pups_born_alive), gd0_weight)
+```
+
+##Using pipline to put multiple steps together
+
+```{r}
+
+```
+
