--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -106,7 +106,77 @@ arrange(litters_data, desc(pups_born_alive), gd0_weight)
 
 ##Using pipline to put multiple steps together
 
-```{r}
+Look at interpediate object approach:
 
+```{r}
+litters_data_raw = read_csv("./data/FAS_litters.csv",
+  col_types = "ccddiiii")
+litters_data_clean_names = janitor::clean_names(litters_data_raw)
+litters_data_selected_cols = select(litters_data_clean_names, -pups_survive)
+litters_data_with_vars = mutate(litters_data_selected_cols, 
+  wt_gain = gd18_weight - gd0_weight,
+  group = tolower(group))
+litters_data_with_vars
+```
+
+Using nested function calls (better than above but still not clean):
+
+```{r}
+litters_data_clean = 
+  mutate( #mutating wt_gain
+    select( #select everything but pups_survive
+      janitor::clean_names(
+        read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") #reading in data set
+        ), 
+    -pups_survive
+    ),
+  wt_gain = gd18_weight - gd0_weight,
+  group = tolower(group)
+  )
+litters_data_clean
+```
+
+Finally using piping!
+
+```{r}
+read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>%
+  janitor::clean_names() %>%
+  select(-pups_survive) %>%
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = tolower(group)
+  ) %>% 
+filter(!is.na(gd0_weight)) #no need to say data because tidyverse
+filter(., !is.na(gd0_weight)) #same as above but need to include this for not in tidyverse
+filter(.data = ., !is.na(gd0_weight)) #same as above
+```
+
+Illustrate placeholder using with 'lm'
+
+```{r}
+#everything before %>%, put it into data = .
+read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>%
+  janitor::clean_names() %>%
+  select(., -pups_survive) %>% # . puts everything before into the dot (.)
+  mutate(., #<-put everything before at this dot point
+    wt_gain = gd18_weight - gd0_weight,
+    group = tolower(group)
+  ) %>% 
+filter(!is.na(gd0_weight)) %>% 
+lm(gd18_weight ~ gd0_weight, data = .)
+
+```
+
+Saving into litters_data_clean
+```{r}
+litters_data_clean =
+  read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>%
+  janitor::clean_names() %>%
+  select(-pups_survive) %>% 
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = tolower(group)
+  ) %>% 
+  filter(!is.na(gd0_weight))
 ```
 
